<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="54dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/friends_tab_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="friends tab"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onLaunchFriendsClicked"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/ic_friends"
            app:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/favorite_tab_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="favorites tab"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onLaunchFavoritesClicked"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/ic_favorite"
            app:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/profile_tab_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="profile tab"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/ic_profile"
            app:tint="?attr/colorPrimaryVariant" />

        <ImageButton
            android:id="@+id/session_tab_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="session tab"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onViewSessionsClicked"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/ic_session"
            app:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/debug_tab_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="debug tab"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onLaunchDebugClicked"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/ic_debug"
            app:tint="?android:attr/textColorPrimary" />
    </LinearLayout>

    <TextView
        android:id="@+id/edit_courses_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:text="@string/profile_title"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".15" />

    <EditText
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="#7F8083"
        android:textSize="@dimen/small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <EditText
        android:id="@+id/photo_url_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_url"
        android:inputType="textPersonName"
        android:textColor="#7F8083"
        android:textSize="@dimen/small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/courses_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCoursesClicked"
        android:text="@string/add_courses"
        android:textColor="#000000"
        android:textSize="@dimen/small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.840" />

    <Button
        android:id="@+id/view_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickViewMyProfile"
        android:text="View My Profile"
        android:textColor="#000000"
        android:textSize="@dimen/small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="@dimen/small_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Photo URL"
        android:textSize="@dimen/small_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login In With Google"
        android:onClick="onLoginClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <TextView
        android:id="@+id/login_status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You are not signed in to Google."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>