<resources>
    <string name="app_name">Birds of a Feather</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_url">Enter Photo URL</string>
    <string name="home">Home</string>
    <string name="adding_course">Adding a Course</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">i.e. CSE</string>
    <string name="course_number">Course Number</string>
    <string name="enter_course_num">i.e. 100</string>
    <string name="year">Year</string>
    <string name="quarter">Quarter</string>
    <string name="save_course_exit">Save and Exit</string>
    <string name="save_add_course">Save And Add Another</string>
    <string name="delete_course">Cancel</string>
    <string name="save">Save</string>
    <string name="add_courses">Add Courses</string>
    <string name="profile_title">Profile</string>
    <string name="enter_session_name">Enter Session Name...</string>
</resources>