//package com.example.birds_of_a_feather_team_20;
//
//
//import androidx.test.espresso.DataInteraction;
//import androidx.test.espresso.ViewInteraction;
//import androidx.test.filters.LargeTest;
//import androidx.test.rule.ActivityTestRule;
//import androidx.test.runner.AndroidJUnit4;
//
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import static androidx.test.InstrumentationRegistry.getInstrumentation;
//import static androidx.test.espresso.Espresso.onData;
//import static androidx.test.espresso.Espresso.onView;
//import static androidx.test.espresso.Espresso.pressBack;
//import static androidx.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
//import static androidx.test.espresso.action.ViewActions.*;
//import static androidx.test.espresso.assertion.ViewAssertions.*;
//import static androidx.test.espresso.matcher.ViewMatchers.*;
//
//import com.example.birds_of_a_feather_team_20.R;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.hamcrest.core.IsInstanceOf;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//import static org.hamcrest.Matchers.allOf;
//import static org.hamcrest.Matchers.anything;
//import static org.hamcrest.Matchers.is;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class AddProfileTest {
//
//    @Rule
//    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);
//
//    @Test
//    public void addProfileTestExpresso() {
//        ViewInteraction appCompatImageButton = onView(
//                allOf(withId(R.id.profile_tab_button), withContentDescription("profile tab"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
//                                        2),
//                                2),
//                        isDisplayed()));
//        appCompatImageButton.perform(click());
//
//        ViewInteraction appCompatEditText = onView(
//                allOf(withId(R.id.name_textview),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        appCompatEditText.perform(replaceText("George"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText2 = onView(
//                allOf(withId(R.id.name_textview), withText("George"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        appCompatEditText2.perform(pressImeActionButton());
//
//        ViewInteraction appCompatEditText3 = onView(
//                allOf(withId(R.id.photo_url_textview),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                3),
//                        isDisplayed()));
//        appCompatEditText3.perform(replaceText("www.wikipedia.com"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText4 = onView(
//                allOf(withId(R.id.photo_url_textview), withText("www.wikipedia.com"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                3),
//                        isDisplayed()));
//        appCompatEditText4.perform(pressImeActionButton());
//
//        ViewInteraction materialButton = onView(
//                allOf(withId(R.id.courses_button), withText("Add Courses"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                4),
//                        isDisplayed()));
//        materialButton.perform(click());
//
//        ViewInteraction materialButton2 = onView(
//                allOf(withId(R.id.delete_course), withText("Cancel"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                11),
//                        isDisplayed()));
//        materialButton2.perform(click());
//
//        ViewInteraction appCompatImageButton2 = onView(
//                allOf(withId(R.id.friends_tab_button), withContentDescription("friends tab"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatImageButton2.perform(click());
//
//        ViewInteraction appCompatImageButton3 = onView(
//                allOf(withId(R.id.profile_tab_button), withContentDescription("profile tab"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
//                                        2),
//                                2),
//                        isDisplayed()));
//        appCompatImageButton3.perform(click());
//
//        ViewInteraction editText = onView(
//                allOf(withId(R.id.name_textview), withText("George"),
//                        withParent(withParent(withId(android.R.id.content))),
//                        isDisplayed()));
//        editText.check(matches(withText("George")));
//
//        ViewInteraction editText2 = onView(
//                allOf(withId(R.id.photo_url_textview), withText("www.wikipedia.com"),
//                        withParent(withParent(withId(android.R.id.content))),
//                        isDisplayed()));
//        editText2.check(matches(withText("www.wikipedia.com")));
//    }
//
//    private static Matcher<View> childAtPosition(
//            final Matcher<View> parentMatcher, final int position) {
//
//        return new TypeSafeMatcher<View>() {
//            @Override
//            public void describeTo(Description description) {
//                description.appendText("Child at position " + position + " in parent ");
//                parentMatcher.describeTo(description);
//            }
//
//            @Override
//            public boolean matchesSafely(View view) {
//                ViewParent parent = view.getParent();
//                return parent instanceof ViewGroup && parentMatcher.matches(parent)
//                        && view.equals(((ViewGroup) parent).getChildAt(position));
//            }
//        };
//    }
//}